[project]
name = "comfyui_mittimi_daisy_chain_text"
description = "It has the ability to concatenate text."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiDaisyChainText"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiDaisyChainText"
Icon = ""

